objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line3__c</fullName>
        <label>Address Line3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provience__c</fullName>
        <label>Province</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>